Major changes between version 0.98.3 and 0.98.4.
------------------------------------------------
  - When using ifconfig we specify the remote IP address as the
    broadcast as well as the pointopoint. This is to enable diald
    to handle both pointopoint and broadcast interfaces on 2.2.x
    kernels. Note that if you specify a netmask other than all ones
    (the default) the remote IP you specify should probably be
    the broadcast.
  - Added an ifsetup script that can be used to set up interfaces
    in *really* interesting ways. If defined it is used instead
    of ifconfig and *all* routing calls - route, defaultroute,
    addroute/delroute all have to be handled as part of ifsetup.
    At this stage ifsetup is mainly experimental. It is here so
    that configurations using it in future do not have to be
    redefined in order to fall back on a "stable" diald release.
  - Unified all the functions that invoked external programs via
    a shell into one glorious function. Now the output from
    everything is logged - including ip-up/ip-down - and all
    scripts have the same environment variables set for them.
    Since we log the output we no longer log the exit status
    of external scripts.
  - Made local and remote addresses optional. If you are using a
    named interface as proxy (or have no proxy at all) you may
    not care about the addresses.
  - Added a proxy option which may be used to specify a particular
    interface to snoop as a proxy. One possible use for this would
    be to set up an ISDN interface "by the book", leave it in
    manual dial mode, and run diald with proxy isdn0 and device isdn0
    using the connect/disconnect scripts to trigger dialling and
    hangup. Then the kernel bloat used to do half the job diald
    can do would be redundant. (I haven't tried this yet. I don't
    have ISDN at home. Sponsorship is welcome :-) )
  - Ethertap/SLIP proxy is no longer a compile time option. Diald