@@ -129,6 +129,12 @@ void slip_start(void)
 	    if (dynamic_mode == DMODE_LOCAL_REMOTE)
 		if (!grab_addr(&remote_ip)) return;
 	    del_timer(&failt);
+	    if (dynamic_addrs > 1) {
+		if (orig_remote_ip) free(orig_remote_ip);
+		orig_remote_ip = strdup(remote_ip);
+		if (orig_local_ip) free(orig_local_ip);
+		orig_local_ip = strdup(local_ip);
+	    }
 	    mon_syslog(LOG_INFO,"New addresses: local %s, remote %s.",
 		local_ip,remote_ip);
 	}
@@ -224,6 +230,12 @@ int slip_set_addrs()
 
     if (waiting_for_bootp) {
         pclose(bootpfp);
+	if (dynamic_addrs > 1) {
+	    if (orig_remote_ip) free(orig_remote_ip);
+	    orig_remote_ip = strdup(remote_ip);
+	    if (orig_local_ip) free(orig_local_ip);
+	    orig_local_ip = strdup(local_ip);
+	}
 	mon_syslog(LOG_INFO,"New addresses: local %s, remote %s.",
 	    local_ip,remote_ip);
     	waiting_for_bootp = 0;
